--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,5 +1,7 @@
 # Copyright (c) 2016-present Sven Greb <development@svengreb.de>
 # This source code is licensed under the MIT license found in the license file.
+font:
+  size: 7.5
 
 colors:
   primary:
