--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id setxkbmap -option "caps:none"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -44,6 +45,11 @@ bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 4 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 4 # decrease screen brightness
+# Bind caps lock (code 66)
+bindcode 66 exec --no-startup-id ~/.config/i3/change_language.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -60,9 +66,10 @@ bindsym $mod+Shift+q kill
 
 # A more modern dmenu replacement is rofi:
 bindsym $mod+space exec "rofi -show run"
+bindsym $mod+Shift+s exec "flameshot gui"
 
 # Chrome
-bindsym $mod+Shift+Return exec google-chrome
+bindsym $mod+Shift+Return exec firefox
 
 # change focus
 bindsym $mod+h focus left
@@ -170,10 +177,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 4 px or 1 ppt
+        bindsym j resize grow height 4 px or 1 ppt
+        bindsym k resize shrink height 4 px or 1 ppt
+        bindsym l resize grow width 4 px or 1 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -190,7 +197,9 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 gaps inner 10px
+smart_gaps on
 exec_always --no-startup-id dunst
+exec_always --no-startup-id ~/.screenlayout/posao.sh
 
 default_border pixel 2
 focus_follows_mouse no
