--- a/i3status/config
+++ b/i3status/config
@@ -12,13 +12,15 @@ general {
 }
 
 #order += "ipv6"
-#order += "wireless _first_"
-order += "ethernet _first_"
-#order += "battery all"
+order += "wireless _first_"
+order += "volume master"
+#order += "ethernet _first_"
+order += "battery all"
 order += "disk /"
 #order += "load"
 order += "memory"
 order += "tztime local"
+order += "tztime london"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
@@ -32,6 +34,10 @@ ethernet _first_ {
 
 battery all {
         format = "%status %percentage %remaining"
+	status_bat = "🔋 BAT"
+	status_chr = "⚡ CHR"
+        status_full = "☻ FULL"
+	low_threshold = 10
 }
 
 disk "/" {
@@ -50,4 +56,17 @@ memory {
 
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
+}
+
+tztime london {
+        format = "%H:%M:%S %Z"
+        timezone = "Europe/London"
+}
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
