--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
 gtk-icon-theme-name = Nordic
 gtk-theme-name = Nordic
-gtk-font-name = Ubuntu Mono Nerd Font Mono
+gtk-font-name = Mononoki Nerd Font Mono
